* Calling RevisionStore methods with a LinkTarget emits deprecation warnings
  now. It was already documented as deprecated since 1.36.
  - RevisionStore::getFirstRevision
  - RevisionStore::getRevisionByTimestamp
  - RevisionStore::getRevisionByTitle
* The MagicWordwgVariableIDsHook, deprecated in 1.35, now emits warnings in the
  hook runner. Migrate to the GetMagicVariableIDsHook instead.
* …

=== Other changes in 1.45 ===

* Reading parser cache content using native PHP serialization has been
  removed in this release.  JSON serialization was been the default
  since 1.36, and the option to use native serialization was removed
  in 1.39.  Upgrades from revision 1.38 and earlier with
  $wgParserCacheUseJson=false should either clear the parser cache, or
  upgrade to revision 1.36-1.44 with $wgParserCacheUseJson=true and
  wait until the parser cache expiration time
  ($wgParserCacheExpireTime) elapses before upgrading to this release.

  <https://www.mediawiki.org/wiki/Manual:Parser_cache/Serialization_compatibility>

* …

== Compatibility ==

MediaWiki 1.45 requires PHP 8.1.0 or later and the following PHP extensions:

* ctype
* dom
* fileinfo
* iconv
* intl
* json
* mbstring
* xml

MariaDB is the recommended database software. MySQL, PostgreSQL, or SQLite can
be used instead, but support for them is somewhat less mature.

The supported versions are:

* MariaDB 10.3 or higher
* MySQL 5.7.0 or higher
* PostgreSQL 10 or later
* SQLite 3.8.0 or later

== Online documentation ==
Documentation for both end-users and site administrators is available on
MediaWiki.org, and is covered under the GNU Free Documentation License (except
for pages that explicitly state that their contents are in the public domain):

  <https://www.mediawiki.org/wiki/Special:MyLanguage/Documentation>

== Mailing list ==
A mailing list is available for MediaWiki user support and discussion:

  <https://lists.wikimedia.org/postorius/lists/mediawiki-l.lists.wikimedia.org/>
