@@ -79,6 +79,7 @@ class PageConfigFactory extends \Wikimedia\Parsoid\Config\PageConfigFactory {
 	 *   RevisionAccessException if not.
 	 * @return \Wikimedia\Parsoid\Config\PageConfig
 	 * @throws RevisionAccessException
+	 * @deprecated since 1.44; use ::createFromParserOptions() instead
 	 */
 	public function create(
 		PageIdentity $pageId,
@@ -88,11 +89,49 @@ class PageConfigFactory extends \Wikimedia\Parsoid\Config\PageConfigFactory {
 		?Bcp47Code $pageLanguageOverride = null,
 		bool $ensureAccessibleContent = false
 	): \Wikimedia\Parsoid\Config\PageConfig {
-		$title = Title::newFromPageIdentity( $pageId );
-
 		if ( $unused !== null ) {
 			wfDeprecated( __METHOD__ . ' with non-null 4th arg', '1.40' );
 		}
+
+		$parserOptions =
+			$user
+			? ParserOptions::newFromUser( $user )
+			: ParserOptions::newFromAnon();
+
+		return $this->createFromParserOptions(
+			$parserOptions, $pageId, $revision,
+			$pageLanguageOverride, $ensureAccessibleContent
+		);
+	}
+
+	/**
+	 * Create a new PageConfig.
+	 *
+	 * Note that Parsoid isn't supposed to use the user context by design; all
+	 * user-specific processing is expected to be introduced as a post-parse
+	 * transform. The $user parameter is therefore usually null, especially
+	 * in background job parsing, although there are corner cases during
+	 * extension processing where a non-null $user could affect the output.
+	 *
+	 * @param ParserOptions $parserOptions (See note above about user identity
+	 *   in the parser options.)
+	 * @param PageIdentity $pageId The page represented by the PageConfig.
+	 * @param int|RevisionRecord|null $revision Revision id or a revision record
+	 * @param ?Bcp47Code $pageLanguageOverride
+	 * @param bool $ensureAccessibleContent If true, ensures that we can get content
+	 *   from the newly constructed pageConfig's RevisionRecord and throws a
+	 *   RevisionAccessException if not.
+	 * @return \Wikimedia\Parsoid\Config\PageConfig
+	 * @throws RevisionAccessException
+	 */
+	public function createFromParserOptions(
+		ParserOptions $parserOptions,
+		PageIdentity $pageId,
+		$revision = null,
+		?Bcp47Code $pageLanguageOverride = null,
+		bool $ensureAccessibleContent = false
+	): \Wikimedia\Parsoid\Config\PageConfig {
+		$title = Title::newFromPageIdentity( $pageId );
 
 		if ( $revision === null ) {
 			// Fetch the 'latest' revision for the given title.
@@ -158,19 +197,11 @@ class PageConfigFactory extends \Wikimedia\Parsoid\Config\PageConfigFactory {
 			throw new SuppressedDataException( 'Not an available content version.' );
 		}
 
-		$parserOptions =
-			$user
-			? ParserOptions::newFromUser( $user )
-			: ParserOptions::newFromAnon();
 		// Parsoid parser options should always have useParsoid set
 		$parserOptions->setUseParsoid();
 
-		// Turn off some options since Parsoid/JS currently doesn't
-		// do anything with this. As we proceed with closer integration,
-		// we can figure out if there is any value to these limit reports.
-		$parserOptions->setOption( 'enableLimitReport', false );
-
 		$slotRoleHandler = $this->slotRoleRegistry->getRoleHandler( SlotRecord::MAIN );
+
 		if ( $pageLanguageOverride ) {
 			$pageLanguage = $this->languageFactory->getLanguage( $pageLanguageOverride );
 			$parserOptions->setTargetLanguage( $pageLanguage );
